# it

./: .coveragerc  .isort.cfg  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  PLUGINS.md  Procfile  README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  whitercanada.json
.github/ISSUE_TEMPLATE/: false-positive.md  new-handler-request.md
.github/workflows/: main.yml
docs/: adding_new_patterns.md  contributing.md  error_codes.md  plugins.md
examples/: pattern1.py  pattern2.py  pattern3.py  pattern4.py  pattern5.py
inspectortiger/: __init__.py  __main__.py  config.ini  config.py  config_manager.py  configmanager.py  inspector.py  inspects.py  plugin.py  reports.py  server.py  session.py  utils.py
inspectortiger/plugins/: context.py  general.py  misc.py  parentize.py  unreachable_except.py  upgrade.py  upgradeable.py
inspectortiger/plugins/community/: django.py  unimport.py
inspectortiger/server/: __init__.py  __main__.py  handler.py
it/: __init__.py  __main__.py  config.py  inspector.py  plugin.py  session.py  utils.py
it/plugins/: context.py  general.py  parentize.py  upgrade.py
it/plugins/community/: README.md
it/server/: __init__.py  __main__.py  handler.py
tests/: test_config_manager.py  test_configmanager.py  test_inspector.py  test_inspects.py  test_plugin.py  test_reports.py  test_utils.py
tests/inspections/upgrade/: alphabet_constant.inspect  builtin_enumerate.inspect  map_use_comprehension.inspect  optional.inspect  super_args.inspect  suppress.inspect  use_comprehension.inspect  (+1 more)
(+8 files in other folders)
