[metadata]
name = inspectortiger
version = 0.9.0
url = https://github.com/thg-consulting/inspectortiger
author = thg
description = Modern python code review tool / framework
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*

[options.entry_points]
console_scripts =
    inspectortiger = inspectortiger.__main__:main

[bdist_wheel]
universal = True
